--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -5,13 +5,22 @@
 <table>
   <thead>
     <tr>
+      <th>Title</th>
+      <th>Body</th>
+      <th>User</th>
       <th colspan="3"></th>
     </tr>
+   
   </thead>
 
   <tbody>
     <% @posts.each do |post| %>
       <tr>
+        <td><%= post.title %></td>
+        <td><%= post.body %></td>
+        <% if user_signed_in?%>
+        <td><%= post.User.email%></td>
+        <% end %>
         <td><%= link_to 'Show', post %></td>
         <td><%= link_to 'Edit', edit_post_path(post) %></td>
         <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
@@ -23,3 +32,10 @@
 <br>
 
 <%= link_to 'New Post', new_post_path %>
+<br>
+<% if user_signed_in? %>
+    <p><%= link_to "Logout", destroy_user_session_path, method: :delete%></p>
+    <% else %>
+    <p><%= link_to "Sign In", new_user_session_path%></p>
+    <p><%= link_to "Sign Up", new_user_registration_path %></p>
+    <% end %>
